src/App.css
@import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap');
/* font-family: "Fira Mono", monospace; */

*{
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  width: 100vw;
  scroll-behavior: smooth;
}
/* width */
::-webkit-scrollbar {
  height: 8px;
  width: 10px;
}
/* Track */
::-webkit-scrollbar-track {
  background: #000000;
  border-radius: 10px;
}
/* Handle */
::-webkit-scrollbar-thumb {
  background: rgb(255, 255, 255);
  border-radius: 10px;
  cursor: pointer;
}

body{
  overflow-x: hidden;
  font-family: "Fira Mono", monospace;
  background-color: rgb(0, 0, 0);
}
#menu_icon{ 
  display: none;
}
.default_style{
  height: max-content;
  width: max-content;
  margin:auto;
}
.Footer_Main{
  background-color: #151515;
}
.blink_animation{
  animation: blink 2s infinite ease-in-out;
}
@keyframes blink {
    0%{
      opacity: 1;
    } 
    50%{
      opacity: 0;
    } 
    100%{
      opacity: 1;
    }  
}
@media (max-width:640px) {

  body{
    width: 100vw;
    overflow-x: hidden;
  }

  /* ---------------Header--------------- */
  .Header_Navigation{
    display: none;
  }
  .Header_Title{
    height: max-content;
    display: flex;
    width: 30%;
    margin: 4vh 20px auto 20px;
    img{
      height: 3vh;
      margin-top: auto ;
    }
  }
  .Header_UserFunction{
    margin-right: 110px;
  }

  /* ---------------SignUp--------------- */
  .SignUp_container{
    width: 80%;
  }

  /* ---------------SignIn--------------- */
  .SignIn_Container{
    width: 80%;
  }

  /* ---------------Banner--------------- */
  .Right_button{
    right: -10px;
  }
  .Banner_Data{
    bottom: 24%;

    .Banner_Movie_Label{
      font-size: .8rem;
      background-color: #00000040;
    }
    .Banner_Movie_Title{
      width: 95vw;
      display: flex;
      flex-wrap: wrap;
      font-size: 1.3rem;
    }
    .Banner_Movie_Description{
      font-size: .8rem;
      width: 85vw;
    }
  }
  .Banner_Movie_Watch{
    font-size: .8rem;
  }
  .Banner_Movie_Info{
    font-size: .8rem;
  }
  .Banner_Pagination{
    left: 10%;
    bottom: 15%;
    .Banner_Page_Indicator{
      width: 3rem;
    }
  }

  /* ---------------MovieCard--------------- */
  .Moviecard_main{
    height: 40vh;
    width: 40vw;
  }
  .Card_title{
    font-size: 1.4rem;
  }
  .Card_Title_nav{
    width: 97%;
  }
  .Card_navigation{
    font-size: .9rem;
    margin-left: -20px;
    span{
      font-size: .9rem;
    }
  }

  /* ---------------Page Cards--------------- */
  .Page_cards_container{
    width: 90vw;
  }
  .Page_Moviecard{
    margin: 20px 9px;
    width: 40%;
  }
  .Page_card_title{
    font-size: 1.8rem;
  }
  .Page_card_description{
    font-size: .9rem;
  }
  .Page_MovieTitle{
    font-size: .9rem;
  }
  .Pagination_content{
    display: flex;
    width: 60%;
  }

  /* ---------------Movie Item--------------- */
  .MovieItem{
    width: 100vw;
    overflow-x: hidden;
  }
  .MoiveItem_Hero_content{
    display: block;
    height: max-content;
  }
  .MoiveItem_Image_Container{
    width: 95vw;
    height: 30vh;
    margin: 30% auto 10px auto;

    img{
      width: 100%;
      height: 1005;
    }
  }
  .Movie_Banner_Content{
    width: 95vw;

    .Movie_Banner_Content_title{
      font-size: 1.5rem;
    }
    .Movie_Banner_Content_description{
      font-size: .9rem;
      margin-top: 5px;
    }
    .Movie_Banner_Content_release{
      font-size: .9rem;
    }
    .Movie_Banner_Content_rating{
      font-size: .9rem;
    }
  }
  .Movie_Banner_Button{
    width: 95vw;
    height: max-content;
    flex-flow: column;
    font-size: .7rem;
    margin: 10px auto;

    button{
      margin: 5px;
    }
  }

  /* ---------------Watchlist--------------- */
  .LoggedOut_watchlist{
    text-align: center;
    width: 95vw;
    margin: auto;
  }
  .Watchlist_empty{
    text-align: center;
    width: 80%;
    margin-top: 80%;
  }

  /* ---------------Trailer--------------- */
  .Videos_title{
    font-size: 1.4rem;
  }
  .videos{
    height: max-content;
  }
  .trailers{
    width: 80vw;
    height: 30vh;

    .trailer{
      width: 80vw;
      height: 30vh;
      object-position: center;
      object-fit: cover;
    }
  }

  /* ---------------Cast--------------- */
  .Casts_card_title{
    font-size: 1.4rem;
  }
  .Casts_card_data{
    font-size: .8rem;
  }
  .Casts_card{
    width: 40vw;
    height: 40vh;
    margin: 0px 12px 0px 0px;
  }

  /* ---------------Search--------------- */
  .Search_Title{
    font-size: 1.8rem; 
  }
  .Search_Description{
    font-size: .9rem;
  }
  .Search-box_container{
    width: 100vw;
    flex-direction: column;

    input{
      margin: 5px auto;
      width: 85%;
    }
    button{
      width: 50%;
      margin: 5px auto;
    }
  }

  /* ---------------Footer--------------- */
  .Footer_title{
    font-size: 1.5rem;
  }
  .Footer_Main{
    height: 23vh;
    .Quick_Link {

      justify-content: center;
      width: 85vw;
      margin: auto 5px auto 5px;
      .Links{
        justify-content: center;
        font-size: .8rem;
      }
    }
  }
  .Dividor{
    display: none;
  }
  .Copyright{
    font-size: .8rem;
  }
}

